alteração no arquivo template modificação de layout

--- a/meusContatos-Crud/webapp/add.xhtml
+++ b/meusContatos-Crud/webapp/add.xhtml
@@ -34,7 +34,7 @@
 				<p:inputText value="#{contato.enderecoContato}" required="true"></p:inputText>
 				<f:facet name="footer">
 					<p:commandButton class="button"
-						action="#{contatoBean.save(contato)}" value="Salvar" ajax="false"
+						action="#{contatoBean.salvar(contato)}" value="Salvar" ajax="false"
 						icon="ui-icon-disk"></p:commandButton>
 				</f:facet>
 
