--- a/meusContatos-Crud/webapp/editar.xhtml
+++ b/meusContatos-Crud/webapp/editar.xhtml
@@ -35,7 +35,7 @@
 
 				<f:facet name="footer">
 					<p:commandButton class="buttonEditPage"
-						action="#{contatoBean.update(contato)}" value="Atualizar"
+						action="#{contatoBean.alterar(contato)}" value="Atualizar"
 						ajax="false" icon="ui-icon-disk"></p:commandButton>
 				</f:facet>
 
