--- a/meusContatos-Crud/webapp/index.xhtml
+++ b/meusContatos-Crud/webapp/index.xhtml
@@ -15,7 +15,7 @@
 		<p:outputLabel class="label" value="Lista de contatos"></p:outputLabel>
 		<h:form>
 
-			<p:dataTable value="#{contatoBean.searchContacts()}" var="contato"
+			<p:dataTable value="#{contatoBean.listarContatos()}" var="contato"
 				border="1">
 
 				<p:column>
@@ -41,7 +41,7 @@
 				<p:column>
 					<f:facet name="header">Editar</f:facet>
 					<div class="centro">
-						<p:commandButton action="#{contatoBean.edit(contato.idContato)}"
+						<p:commandButton action="#{contatoBean.editar(contato.idContato)}"
 							value="Editar" ajax="false" icon="ui-icon-pencil"></p:commandButton>
 					</div>
 				</p:column>
@@ -49,7 +49,7 @@
 				<p:column>
 					<f:facet name="header">Apagar</f:facet>
 					<div class="centro">
-						<p:commandButton action="#{contatoBean.delete(contato.idContato)}"
+						<p:commandButton action="#{contatoBean.deletar(contato.idContato)}"
 							value="Apagar" ajax="false" icon="ui-icon-trash"></p:commandButton>
 					</div>
 				</p:column>
@@ -57,7 +57,7 @@
 			</p:dataTable>
 			<br></br>
 			<div class="centro">
-				<p:commandButton action="#{contatoBean.add}"
+				<p:commandButton action="#{contatoBean.adicionar}"
 					value="Adicionar contato" ajax="false" icon="ui-icon-plusthick"></p:commandButton>
 			</div>
 		</h:form>
