alteração no arquivo template index.xhtml modificação layout

--- a/meusContatos-Crud/webapp/index.xhtml
+++ b/meusContatos-Crud/webapp/index.xhtml
@@ -57,7 +57,7 @@
 			</p:dataTable>
 			<br></br>
 			<div class="centro">
-				<p:commandButton action="#{contatoBean.adicionar}"
+				<p:commandButton action="#{contatoBean.add}"
 					value="Adicionar contato" ajax="false" icon="ui-icon-plusthick"></p:commandButton>
 			</div>
 		</h:form>
